# amcu

./: Compiler.mk  Makefile  Rules.mk
gentoc2/: CMakeLists.txt  gentoc2.c  rsa_keygen.sh
gentoc2/keys/: rsa_public_generated.txt  rsa_to_c_generated.txt
include/: Makefile  amcu_mem_defs.h  xrobj_hdr_defs.h
mtb_shared/: cypress_manifest.txt
mtb_shared/TARGET_CY8CKIT-062S2-43012/: TARGET_CY8CKIT-062S2-43012.version
mtb_shared/freertos/: freertos.version
mtb_shared/infn-patch/: README  TARGET_CY8CKIT-062S2-43012-FW9645-1.patch  cm0p.S  cm4.S  cy8c6xxa_cm0plusA.ld  cy8c6xxa_cm0plusA.ld.in  cy8c6xxa_cm0plusA.ld_cmsis.in  cy8c6xxa_cm0plusA_pic.ld.in  cy8c6xxa_cm0plusB.ld  cy8c6xxa_cm0plusB.ld.in  cy8c6xxa_cm4_dualA.ld  cy8c6xxa_cm4_dualA.ld.in  cy8c6xxa_cm4_dualA_cmsis.ld.in  cy8c6xxa_cm4_dualA_sh.ld.in  cy8c6xxa_cm4_dualB.ld  cy8c6xxa_cm4_dualB.ld.in  fw_anywhere_startup_inline.S  fw_anywhere_startup_inline_cm0p.S  fw_anywhere_startup_inline_cm4.S  mtb-pdl-cat1-FW9198-0.patch  new.S  startup_psoc6_02_cm0plus.S  startup_psoc6_02_cm4.S
rsakeys/: amcu_private_key.pem  amcu_public_key.hex  amcu_public_key_zero.hex  amcu_toc2.hex  amcu_toc2_zero.hex
src/: .gitignore  Makefile
src/app_cm0p/: .mtbqueryapi  Makefile  binToC.py  build.py  build.txt  build_ns.py  build_ns.txt  clock.c  clock.h  copy.txt  copy_ns.py  copy_ns.txt  image_info.c  image_info.h  main.c  run.txt  run_ns.txt
src/app_cm4/: .mtbqueryapi  Makefile  build.txt  build_ns.txt  copy.py  copy.txt  copy_ns.txt  image_info.c  image_info.h  main.c  main.h  run.txt  run_ns.txt  version_nums.txt
(+37 files in other folders)
